--- a/css/default.css
+++ b/css/default.css
@@ -1,23 +1,155 @@
 /* For demo purposes only */
-
-.demo { width: 100%; height: 100%; }
-.demo .text:nth-child(2) { text-align: center; }
-.demo .text:nth-child(2) .button { margin: 0 6px; }
-.demo .pills-content { text-align: center; }
-
+ .demo {
+    width: 100%;
+    height: 100%;
+}
+.demo .text:nth-child(2) {
+    text-align: center;
+}
+.demo .text:nth-child(2) .button {
+    margin: 0 6px;
+}
+.demo .pills-content {
+    text-align: center;
+}
 @media (min-device-width: 1024px) {
-  ::-webkit-scrollbar { display: none; }
-  body::-webkit-scrollbar { display: inherit; width: 12px; }
-  body::-webkit-scrollbar-track { background: transparent; border: 0; }
-  body::-webkit-scrollbar-thumb { background: #888; border: 3px solid #333; border-radius: 6px; }
-  body { background: #333; }
-  .demo { position: absolute; top: 50%; left: 50%; width: 320px; height: 480px; margin: -240px 0 0 -160px; overflow: hidden; border-radius: 2px; -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); }
-  body:before, body:after { display: block; position: absolute; left: 0; right: 0; line-height: 50px; font-weight: bold; text-align: center; text-shadow: 0 1px 2px black; }
-  body:before { content: 'Demo Mode'; top: 50%; margin-top: -290px; font-size: 16px; color: #eee; }
-  body:after { content: 'Best viewed in iOS or Android 4.'; bottom: 50%; margin-bottom: -290px; font-size: 14px; color: #ccc; }
+    ::-webkit-scrollbar {
+        display: none;
+    }
+    body::-webkit-scrollbar {
+        display: inherit;
+        width: 12px;
+    }
+    body::-webkit-scrollbar-track {
+        background: transparent;
+        border: 0;
+    }
+    body::-webkit-scrollbar-thumb {
+        background: #888;
+        border: 3px solid #333;
+        border-radius: 6px;
+    }
+    body {
+        background: #333;
+    }
+    .demo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 320px;
+        height: 480px;
+        margin: -240px 0 0 -160px;
+        overflow: hidden;
+        border-radius: 2px;
+        -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    }
+    body:before, body:after {
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        line-height: 50px;
+        font-weight: bold;
+        text-align: center;
+        text-shadow: 0 1px 2px black;
+    }
+    body:before {
+        content:'Demo Mode';
+        top: 50%;
+        margin-top: -290px;
+        font-size: 16px;
+        color: #eee;
+    }
+    body:after {
+        content:'Best viewed in iOS or Android 4.';
+        bottom: 50%;
+        margin-bottom: -290px;
+        font-size: 14px;
+        color: #ccc;
+    }
+}
+@media (min-device-width: 1024px) and (max-height: 580px) {
+    body {
+        overflow-y: scroll;
+    }
+    .demo, body:before, body:after {
+        position: relative;
+        top: auto;
+        bottom: auto;
+        left: auto;
+        right: auto;
+        margin: 0 auto;
+    }
 }
 
-@media (min-device-width: 1024px) and (max-height: 580px) {
-  body { overflow-y: scroll; }
-  .demo, body:before, body:after { position: relative; top: auto; bottom: auto; left: auto; right: auto; margin: 0 auto; }
+/* aux styles */
+.stroke {
+    text-decoration: line-through;
+}
+
+/* Graphite table */
+.table {
+    width:100%;
+    line-height:31px;
+    text-align:left;
+    background:white;
+    border-collapse:separate;
+    border-radius:3px;
+    -webkit-box-shadow:0 1px 2px rgba(0, 0, 0, 0.06);
+    box-shadow:0 1px 2px rgba(0, 0, 0, 0.06)
+}
+.table-head>tr>th {
+    padding:0 10px;
+    font-weight:bold;
+    text-shadow:0 1px rgba(255, 255, 255, 0.5);
+    background:#ecf0f0;
+    border-top:1px solid #ccc;
+    border-bottom:1px solid #c8c8c8;
+    border-right:1px solid #ddd;
+    border-right-color:rgba(0, 0, 0, 0.12);
+    background-image:-webkit-linear-gradient(top, #f5fafa, #e7eaea);
+    background-image:-moz-linear-gradient(top, #f5fafa, #e7eaea);
+    background-image:-o-linear-gradient(top, #f5fafa, #e7eaea);
+    background-image:linear-gradient(to bottom, #f5fafa, #e7eaea);
+    -webkit-box-shadow:inset 0 1px rgba(255, 255, 255, 0.5), 0 1px rgba(0, 0, 0, 0.04);
+    box-shadow:inset 0 1px rgba(255, 255, 255, 0.5), 0 1px rgba(0, 0, 0, 0.04)
+}
+.table-head>tr>th:first-child {
+    border-left:1px solid #ccc;
+    border-top-left-radius:3px
+}
+.table-head>tr>th:last-child {
+    border-right-color:#ccc;
+    border-top-right-radius:3px
+}
+.table-body>tr:nth-child(2n) {
+    background:#f8f8f8
+}
+.table-body>tr:hover {
+    background:#f3f3f3
+}
+.table-body>tr:last-child>td {
+    border-bottom:1px solid #ccc
+}
+.table-body>tr:last-child>td:first-child {
+    border-bottom-left-radius:3px
+}
+.table-body>tr:last-child>td:last-child {
+    border-bottom-right-radius:3px
+}
+.table-body>tr>td {
+    padding:0 10px;
+    text-shadow:0 1px white;
+    border-right:1px solid #eee;
+    border-right-color:rgba(0, 0, 0, 0.08)
+}
+.table-body>tr>td:first-child {
+    border-left:1px solid #ccc
+}
+.table-body>tr>td:last-child {
+    border-right-color:#ccc
+}
+.lt-ie9 .table {
+    border-bottom:1px solid #ccc
 }
